10 September 2024 v552: Fixed: Text with a link was sometimes not visible in selected table rows.

--- a/main.css
+++ b/main.css
@@ -1268,7 +1268,7 @@ h2, .pageSubTitleFont, .sectionTitle {
   background-color: var(--row-hover-bgcolor);
 }
 
-.itemSelected, .trSelected td {
+.itemSelected, .trSelected td, .trSelected a {
   background-color: var(--selected-bgcolor);
   color: var(--selected-color);
 }
